Improve HttpCheckExecutor to handle URI correctly